Cyan Skillfish - Regression causing system freeze
Brief summary of the problem:
Testing with an AMD BC-250, the system locks up on kernels since v6.6. The kernel commit 5a3ccb1400339268c5e3dc1fa044a7f6c7f59a02 seems to have first caused the issue.
The issue does not occur on a pure v6.5 kernel, or v6.6 with the above commit reverted, newer kernels have not been tested because other changes make the same revert difficult.
This is definitely a full system freeze and not just a loss of display output, after the freeze affected kernels never show any signs of life such as connecting to a network.
Hardware description:
- CPU:
Architecture: x86_64
CPU op-mode(s): 32-bit, 64-bit
Address sizes: 44 bits physical, 48 bits virtual
Byte Order: Little Endian
CPU(s): 12
On-line CPU(s) list: 0-11
Vendor ID: AuthenticAMD
Model name: AMD BC-250
CPU family: 23
Model: 71
Thread(s) per core: 2
Core(s) per socket: 6
Socket(s): 1
Stepping: 0
- GPU:
*-display
description: VGA compatible controller
product: Cyan Skillfish [BC-250] [1002:13FE]
vendor: Advanced Micro Devices, Inc. [AMD/ATI] [1002]
physical id: 0
bus info: pci@0000:01:00.0
logical name: /dev/fb0
version: 00
width: 64 bits
clock: 33MHz
capabilities: pm pciexpress msi msix vga_controller bus_master cap_list fb
configuration: depth=32 driver=amdgpu latency=0 resolution=1920,1080
resources: irq:55 memory:c0000000-cfffffff memory:d0000000-d01fffff ioport:e000(size=256) memory:fe800000-fe87ffff
- System Memory: 16GiB (split 8G/8G)
- Display(s): Multiple tested, issue occurs regardless of connected display
- Type of Display Connection: DP
System information:
- Distro name and Version: Fedora Workstation 40
- Kernel version:
Linux fedora 6.8.7-300.fc40.x86_64 #1 SMP PREEMPT_DYNAMIC Wed Apr 17 19:21:08 UTC 2024 x86_64 GNU/Linux
How to reproduce the issue:
Boot the system on kernel v6.6 or newer and wait for the amdgpu module to load. The display output stays on but only shows a black image, and the system no longer functions until reset.
The issue does not occur when nomodeset is specified in the kernel command line or the amdgpu is prevented from loading in other ways.
The issue does not occur on kernels v6.5 and older, v6.3 - v6.5 were tested to work as expected.